// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`reactRules > should create react rules 1`] = `
{
  "jsx-a11y/alt-text": "error",
  "jsx-a11y/anchor-ambiguous-text": "off",
  "jsx-a11y/anchor-has-content": "error",
  "jsx-a11y/anchor-is-valid": "error",
  "jsx-a11y/aria-activedescendant-has-tabindex": "error",
  "jsx-a11y/aria-props": "error",
  "jsx-a11y/aria-proptypes": "error",
  "jsx-a11y/aria-role": "error",
  "jsx-a11y/aria-unsupported-elements": "error",
  "jsx-a11y/autocomplete-valid": "error",
  "jsx-a11y/click-events-have-key-events": "error",
  "jsx-a11y/control-has-associated-label": [
    "off",
    {
      "ignoreElements": [
        "audio",
        "canvas",
        "embed",
        "input",
        "textarea",
        "tr",
        "video",
      ],
      "ignoreRoles": [
        "grid",
        "listbox",
        "menu",
        "menubar",
        "radiogroup",
        "row",
        "tablist",
        "toolbar",
        "tree",
        "treegrid",
      ],
      "includeRoles": [
        "alert",
        "dialog",
      ],
    },
  ],
  "jsx-a11y/heading-has-content": "error",
  "jsx-a11y/html-has-lang": "error",
  "jsx-a11y/iframe-has-title": "error",
  "jsx-a11y/img-redundant-alt": "error",
  "jsx-a11y/interactive-supports-focus": [
    "error",
    {
      "tabbable": [
        "button",
        "checkbox",
        "link",
        "searchbox",
        "spinbutton",
        "switch",
        "textbox",
      ],
    },
  ],
  "jsx-a11y/label-has-associated-control": "error",
  "jsx-a11y/label-has-for": "off",
  "jsx-a11y/media-has-caption": "error",
  "jsx-a11y/mouse-events-have-key-events": "error",
  "jsx-a11y/no-access-key": "error",
  "jsx-a11y/no-autofocus": "error",
  "jsx-a11y/no-distracting-elements": "error",
  "jsx-a11y/no-interactive-element-to-noninteractive-role": [
    "error",
    {
      "canvas": [
        "img",
      ],
      "tr": [
        "none",
        "presentation",
      ],
    },
  ],
  "jsx-a11y/no-noninteractive-element-interactions": [
    "error",
    {
      "alert": [
        "onKeyUp",
        "onKeyDown",
        "onKeyPress",
      ],
      "body": [
        "onError",
        "onLoad",
      ],
      "dialog": [
        "onKeyUp",
        "onKeyDown",
        "onKeyPress",
      ],
      "handlers": [
        "onClick",
        "onError",
        "onLoad",
        "onMouseDown",
        "onMouseUp",
        "onKeyPress",
        "onKeyDown",
        "onKeyUp",
      ],
      "iframe": [
        "onError",
        "onLoad",
      ],
      "img": [
        "onError",
        "onLoad",
      ],
    },
  ],
  "jsx-a11y/no-noninteractive-element-to-interactive-role": [
    "error",
    {
      "fieldset": [
        "radiogroup",
        "presentation",
      ],
      "li": [
        "menuitem",
        "menuitemradio",
        "menuitemcheckbox",
        "option",
        "row",
        "tab",
        "treeitem",
      ],
      "ol": [
        "listbox",
        "menu",
        "menubar",
        "radiogroup",
        "tablist",
        "tree",
        "treegrid",
      ],
      "table": [
        "grid",
      ],
      "td": [
        "gridcell",
      ],
      "ul": [
        "listbox",
        "menu",
        "menubar",
        "radiogroup",
        "tablist",
        "tree",
        "treegrid",
      ],
    },
  ],
  "jsx-a11y/no-noninteractive-tabindex": [
    "error",
    {
      "allowExpressionValues": true,
      "roles": [
        "tabpanel",
      ],
      "tags": [],
    },
  ],
  "jsx-a11y/no-redundant-roles": "error",
  "jsx-a11y/no-static-element-interactions": [
    "error",
    {
      "allowExpressionValues": true,
      "handlers": [
        "onClick",
        "onMouseDown",
        "onMouseUp",
        "onKeyPress",
        "onKeyDown",
        "onKeyUp",
      ],
    },
  ],
  "jsx-a11y/role-has-required-aria-props": "error",
  "jsx-a11y/role-supports-aria-props": "error",
  "jsx-a11y/scope": "error",
  "jsx-a11y/tabindex-no-positive": "error",
  "react-compiler/react-compiler": "error",
  "react-dom/no-dangerously-set-innerhtml": "error",
  "react-dom/no-dangerously-set-innerhtml-with-children": "error",
  "react-dom/no-find-dom-node": "error",
  "react-dom/no-flush-sync": "error",
  "react-dom/no-hydrate": "error",
  "react-dom/no-missing-button-type": "error",
  "react-dom/no-missing-iframe-sandbox": "error",
  "react-dom/no-namespace": "error",
  "react-dom/no-render": "error",
  "react-dom/no-render-return-value": "error",
  "react-dom/no-script-url": "error",
  "react-dom/no-string-style-prop": "error",
  "react-dom/no-unknown-property": [
    "error",
    {
      "requireDataLowercase": true,
    },
  ],
  "react-dom/no-unsafe-iframe-sandbox": "error",
  "react-dom/no-unsafe-target-blank": "error",
  "react-dom/no-use-form-state": "error",
  "react-dom/no-void-elements-with-children": "error",
  "react-hooks-extra/no-direct-set-state-in-use-effect": "off",
  "react-hooks/component-hook-factories": "error",
  "react-hooks/error-boundaries": "error",
  "react-hooks/exhaustive-deps": "error",
  "react-hooks/globals": "error",
  "react-hooks/immutability": "error",
  "react-hooks/incompatible-library": "error",
  "react-hooks/preserve-manual-memoization": "error",
  "react-hooks/purity": "error",
  "react-hooks/refs": "error",
  "react-hooks/rules-of-hooks": "error",
  "react-hooks/set-state-in-effect": "error",
  "react-hooks/set-state-in-render": "error",
  "react-hooks/static-components": "error",
  "react-hooks/unsupported-syntax": "error",
  "react-hooks/use-memo": "error",
  "react-hooks/void-use-memo": "error",
  "react-naming-convention/component-name": "error",
  "react-naming-convention/context-name": "error",
  "react-naming-convention/ref-name": "error",
  "react-naming-convention/use-state": "error",
  "react-refresh/only-export-components": [
    "warn",
    {
      "allowConstantExport": undefined,
      "allowExportNames": [],
    },
  ],
  "react-rsc/function-definition": "error",
  "react-web-api/no-leaked-event-listener": "error",
  "react-web-api/no-leaked-interval": "error",
  "react-web-api/no-leaked-resize-observer": "error",
  "react-web-api/no-leaked-timeout": "error",
  "react-x/jsx-dollar": "off",
  "react-x/jsx-key-before-spread": "error",
  "react-x/jsx-no-comment-textnodes": "error",
  "react-x/jsx-no-duplicate-props": "error",
  "react-x/jsx-no-iife": "error",
  "react-x/jsx-shorthand-boolean": "error",
  "react-x/jsx-shorthand-fragment": "error",
  "react-x/jsx-uses-react": "error",
  "react-x/jsx-uses-vars": "error",
  "react-x/no-access-state-in-setstate": "error",
  "react-x/no-array-index-key": "error",
  "react-x/no-children-count": "error",
  "react-x/no-children-for-each": "error",
  "react-x/no-children-map": "error",
  "react-x/no-children-only": "error",
  "react-x/no-children-prop": "error",
  "react-x/no-children-to-array": "error",
  "react-x/no-class-component": "error",
  "react-x/no-clone-element": "error",
  "react-x/no-component-will-mount": "error",
  "react-x/no-component-will-receive-props": "error",
  "react-x/no-component-will-update": "error",
  "react-x/no-context-provider": "error",
  "react-x/no-create-ref": "error",
  "react-x/no-default-props": "error",
  "react-x/no-direct-mutation-state": "error",
  "react-x/no-duplicate-key": "error",
  "react-x/no-forward-ref": "error",
  "react-x/no-implicit-key": "error",
  "react-x/no-missing-context-display-name": "error",
  "react-x/no-missing-key": "error",
  "react-x/no-misused-capture-owner-stack": "error",
  "react-x/no-nested-component-definitions": "error",
  "react-x/no-nested-lazy-component-declarations": "error",
  "react-x/no-prop-types": "error",
  "react-x/no-redundant-should-component-update": "error",
  "react-x/no-set-state-in-component-did-mount": "error",
  "react-x/no-set-state-in-component-did-update": "error",
  "react-x/no-set-state-in-component-will-update": "error",
  "react-x/no-string-refs": "error",
  "react-x/no-unnecessary-key": "error",
  "react-x/no-unnecessary-use-callback": "error",
  "react-x/no-unnecessary-use-memo": "error",
  "react-x/no-unnecessary-use-prefix": "error",
  "react-x/no-unnecessary-use-ref": "error",
  "react-x/no-unsafe-component-will-mount": "error",
  "react-x/no-unsafe-component-will-receive-props": "error",
  "react-x/no-unsafe-component-will-update": "error",
  "react-x/no-unstable-context-value": "error",
  "react-x/no-unstable-default-props": "error",
  "react-x/no-unused-class-component-members": "error",
  "react-x/no-unused-state": "error",
  "react-x/no-use-context": "error",
  "react-x/no-useless-forward-ref": "error",
  "react-x/no-useless-fragment": "error",
  "react-x/prefer-destructuring-assignment": "error",
  "react-x/prefer-namespace-import": "error",
  "react-x/prefer-use-state-lazy-initialization": "error",
}
`;

exports[`reactRules > should enable recommended TypeScript rules 1`] = `
{
  "jsx-a11y/alt-text": "error",
  "jsx-a11y/anchor-ambiguous-text": "off",
  "jsx-a11y/anchor-has-content": "error",
  "jsx-a11y/anchor-is-valid": "error",
  "jsx-a11y/aria-activedescendant-has-tabindex": "error",
  "jsx-a11y/aria-props": "error",
  "jsx-a11y/aria-proptypes": "error",
  "jsx-a11y/aria-role": "error",
  "jsx-a11y/aria-unsupported-elements": "error",
  "jsx-a11y/autocomplete-valid": "error",
  "jsx-a11y/click-events-have-key-events": "error",
  "jsx-a11y/control-has-associated-label": [
    "off",
    {
      "ignoreElements": [
        "audio",
        "canvas",
        "embed",
        "input",
        "textarea",
        "tr",
        "video",
      ],
      "ignoreRoles": [
        "grid",
        "listbox",
        "menu",
        "menubar",
        "radiogroup",
        "row",
        "tablist",
        "toolbar",
        "tree",
        "treegrid",
      ],
      "includeRoles": [
        "alert",
        "dialog",
      ],
    },
  ],
  "jsx-a11y/heading-has-content": "error",
  "jsx-a11y/html-has-lang": "error",
  "jsx-a11y/iframe-has-title": "error",
  "jsx-a11y/img-redundant-alt": "error",
  "jsx-a11y/interactive-supports-focus": [
    "error",
    {
      "tabbable": [
        "button",
        "checkbox",
        "link",
        "searchbox",
        "spinbutton",
        "switch",
        "textbox",
      ],
    },
  ],
  "jsx-a11y/label-has-associated-control": "error",
  "jsx-a11y/label-has-for": "off",
  "jsx-a11y/media-has-caption": "error",
  "jsx-a11y/mouse-events-have-key-events": "error",
  "jsx-a11y/no-access-key": "error",
  "jsx-a11y/no-autofocus": "error",
  "jsx-a11y/no-distracting-elements": "error",
  "jsx-a11y/no-interactive-element-to-noninteractive-role": [
    "error",
    {
      "canvas": [
        "img",
      ],
      "tr": [
        "none",
        "presentation",
      ],
    },
  ],
  "jsx-a11y/no-noninteractive-element-interactions": [
    "error",
    {
      "alert": [
        "onKeyUp",
        "onKeyDown",
        "onKeyPress",
      ],
      "body": [
        "onError",
        "onLoad",
      ],
      "dialog": [
        "onKeyUp",
        "onKeyDown",
        "onKeyPress",
      ],
      "handlers": [
        "onClick",
        "onError",
        "onLoad",
        "onMouseDown",
        "onMouseUp",
        "onKeyPress",
        "onKeyDown",
        "onKeyUp",
      ],
      "iframe": [
        "onError",
        "onLoad",
      ],
      "img": [
        "onError",
        "onLoad",
      ],
    },
  ],
  "jsx-a11y/no-noninteractive-element-to-interactive-role": [
    "error",
    {
      "fieldset": [
        "radiogroup",
        "presentation",
      ],
      "li": [
        "menuitem",
        "menuitemradio",
        "menuitemcheckbox",
        "option",
        "row",
        "tab",
        "treeitem",
      ],
      "ol": [
        "listbox",
        "menu",
        "menubar",
        "radiogroup",
        "tablist",
        "tree",
        "treegrid",
      ],
      "table": [
        "grid",
      ],
      "td": [
        "gridcell",
      ],
      "ul": [
        "listbox",
        "menu",
        "menubar",
        "radiogroup",
        "tablist",
        "tree",
        "treegrid",
      ],
    },
  ],
  "jsx-a11y/no-noninteractive-tabindex": [
    "error",
    {
      "allowExpressionValues": true,
      "roles": [
        "tabpanel",
      ],
      "tags": [],
    },
  ],
  "jsx-a11y/no-redundant-roles": "error",
  "jsx-a11y/no-static-element-interactions": [
    "error",
    {
      "allowExpressionValues": true,
      "handlers": [
        "onClick",
        "onMouseDown",
        "onMouseUp",
        "onKeyPress",
        "onKeyDown",
        "onKeyUp",
      ],
    },
  ],
  "jsx-a11y/role-has-required-aria-props": "error",
  "jsx-a11y/role-supports-aria-props": "error",
  "jsx-a11y/scope": "error",
  "jsx-a11y/tabindex-no-positive": "error",
  "react-compiler/react-compiler": "error",
  "react-dom/no-dangerously-set-innerhtml": "error",
  "react-dom/no-dangerously-set-innerhtml-with-children": "error",
  "react-dom/no-find-dom-node": "error",
  "react-dom/no-flush-sync": "error",
  "react-dom/no-hydrate": "error",
  "react-dom/no-missing-button-type": "error",
  "react-dom/no-missing-iframe-sandbox": "error",
  "react-dom/no-namespace": "error",
  "react-dom/no-render": "error",
  "react-dom/no-render-return-value": "error",
  "react-dom/no-script-url": "error",
  "react-dom/no-string-style-prop": "off",
  "react-dom/no-unknown-property": "off",
  "react-dom/no-unsafe-iframe-sandbox": "error",
  "react-dom/no-unsafe-target-blank": "error",
  "react-dom/no-use-form-state": "error",
  "react-dom/no-void-elements-with-children": "error",
  "react-hooks-extra/no-direct-set-state-in-use-effect": "off",
  "react-hooks/component-hook-factories": "error",
  "react-hooks/error-boundaries": "error",
  "react-hooks/exhaustive-deps": "error",
  "react-hooks/globals": "error",
  "react-hooks/immutability": "error",
  "react-hooks/incompatible-library": "error",
  "react-hooks/preserve-manual-memoization": "error",
  "react-hooks/purity": "error",
  "react-hooks/refs": "error",
  "react-hooks/rules-of-hooks": "error",
  "react-hooks/set-state-in-effect": "error",
  "react-hooks/set-state-in-render": "error",
  "react-hooks/static-components": "error",
  "react-hooks/unsupported-syntax": "error",
  "react-hooks/use-memo": "error",
  "react-hooks/void-use-memo": "error",
  "react-naming-convention/component-name": "error",
  "react-naming-convention/context-name": "error",
  "react-naming-convention/ref-name": "error",
  "react-naming-convention/use-state": "error",
  "react-refresh/only-export-components": [
    "warn",
    {
      "allowConstantExport": false,
      "allowExportNames": [],
    },
  ],
  "react-rsc/function-definition": "error",
  "react-web-api/no-leaked-event-listener": "error",
  "react-web-api/no-leaked-interval": "error",
  "react-web-api/no-leaked-resize-observer": "error",
  "react-web-api/no-leaked-timeout": "error",
  "react-x/jsx-dollar": "off",
  "react-x/jsx-key-before-spread": "error",
  "react-x/jsx-no-comment-textnodes": "error",
  "react-x/jsx-no-duplicate-props": "off",
  "react-x/jsx-no-iife": "error",
  "react-x/jsx-no-undef": "off",
  "react-x/jsx-shorthand-boolean": "error",
  "react-x/jsx-shorthand-fragment": "error",
  "react-x/jsx-uses-react": "off",
  "react-x/jsx-uses-vars": "off",
  "react-x/no-access-state-in-setstate": "error",
  "react-x/no-array-index-key": "error",
  "react-x/no-children-count": "error",
  "react-x/no-children-for-each": "error",
  "react-x/no-children-map": "error",
  "react-x/no-children-only": "error",
  "react-x/no-children-prop": "error",
  "react-x/no-children-to-array": "error",
  "react-x/no-class-component": "error",
  "react-x/no-clone-element": "error",
  "react-x/no-component-will-mount": "error",
  "react-x/no-component-will-receive-props": "error",
  "react-x/no-component-will-update": "error",
  "react-x/no-context-provider": "error",
  "react-x/no-create-ref": "error",
  "react-x/no-default-props": "error",
  "react-x/no-direct-mutation-state": "error",
  "react-x/no-duplicate-key": "error",
  "react-x/no-forward-ref": "error",
  "react-x/no-implicit-key": "error",
  "react-x/no-leaked-conditional-rendering": "error",
  "react-x/no-missing-context-display-name": "error",
  "react-x/no-missing-key": "error",
  "react-x/no-misused-capture-owner-stack": "error",
  "react-x/no-nested-component-definitions": "error",
  "react-x/no-nested-lazy-component-declarations": "error",
  "react-x/no-prop-types": "error",
  "react-x/no-redundant-should-component-update": "error",
  "react-x/no-set-state-in-component-did-mount": "error",
  "react-x/no-set-state-in-component-did-update": "error",
  "react-x/no-set-state-in-component-will-update": "error",
  "react-x/no-string-refs": "error",
  "react-x/no-unnecessary-key": "error",
  "react-x/no-unnecessary-use-callback": "error",
  "react-x/no-unnecessary-use-memo": "error",
  "react-x/no-unnecessary-use-prefix": "error",
  "react-x/no-unnecessary-use-ref": "error",
  "react-x/no-unsafe-component-will-mount": "error",
  "react-x/no-unsafe-component-will-receive-props": "error",
  "react-x/no-unsafe-component-will-update": "error",
  "react-x/no-unstable-context-value": "error",
  "react-x/no-unstable-default-props": "error",
  "react-x/no-unused-class-component-members": "error",
  "react-x/no-unused-props": "error",
  "react-x/no-unused-state": "error",
  "react-x/no-use-context": "error",
  "react-x/no-useless-forward-ref": "error",
  "react-x/no-useless-fragment": "error",
  "react-x/prefer-destructuring-assignment": "error",
  "react-x/prefer-namespace-import": "error",
  "react-x/prefer-use-state-lazy-initialization": "error",
}
`;
